--- a/RockPaperScissors/RockPaperScissors.csproj
+++ b/RockPaperScissors/RockPaperScissors.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Lizard.cs" />
     <Compile Include="Paper.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="Players.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rock.cs" />
